# chat_analiz-

./: README.md  main.py  ogg_to_wav_to_txt.py  pyproject.toml
src/: main.py
