[project]
name = "chat-analiz"
version = "0.1.0"
description = ""
authors = [
    {name = "81d",email = "<artyom.mordovan@yandex.ru>"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "pymorphy3 (>=2.0.2,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
